0027092: Coding - src/BRep/BRep_Tool.hxx extra semicolon triggers annoying warnings on Clang